fix gulp streams, update landing whitespace

--- a/code13/landing/src/styles/landing-layout.less
+++ b/code13/landing/src/styles/landing-layout.less
@@ -39,12 +39,11 @@ section:not(:last-child),
 
   .mgb-hero-caption {
     text-align: center;
-    padding: 3vh 0;
+    padding: 5vh 0 8vh 0;
     text-shadow: 0 1px 1px fade(#000, 50);
     .ui.header {
       font-size: 2.5rem;
-      margin: 0 0 0.25vh;
-      //&::after { content: '@mobileBreakpoint' }
+      margin: 0 0 1vh;
     }
 
     .mgb-lead {
@@ -58,7 +57,6 @@ section:not(:last-child),
     @media only screen and (min-width: @tabletBreakpoint) {
       .ui.header {
         font-size: 3rem;
-        //&::after { content: '@tabletBreakpoint' }
       }
 
       .mgb-lead {
@@ -68,7 +66,6 @@ section:not(:last-child),
     @media only screen and (min-width: @computerBreakpoint) {
       .ui.header {
         font-size: 3.5rem;
-        //&::after { content: '@computerBreakpoint' }
       }
 
       .mgb-lead {
@@ -78,7 +75,6 @@ section:not(:last-child),
     @media only screen and (min-width: @largeMonitorBreakpoint) {
       .ui.header {
         font-size: 4rem;
-        //&::after { content: '@largeMonitorBreakpoint' }
       }
 
       .mgb-lead {
